Fixed Header Layout Issue

--- a/src/app/shared/component/header/header.component.css
+++ b/src/app/shared/component/header/header.component.css
@@ -371,7 +371,9 @@
   flex-direction: column;
   align-items: center;
   /* position: relative; */
-  padding: 5px 15px;
+  padding: 0px !important;
+  margin-top: 12px;
+  margin-right: 10px;
 }
 
 .login-flex span {
